Use text blocks and `String.formatted` and forbid `String.format`